Add files via upload
fix:errror in  api method